draft of html for login pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,52 @@
 </head>
 
 <body>
-  <h1>Have fun! 🥔</h1>
+  <nav>
+    <h1>To Do List!</h1>
+    <div class = "nav_buttons">
+      <button>New Task</button> 
+      <button>Logout</button> 
+    </div>
+  </nav>
+  <br>
+  <br>
+   <br>
+  <br>
+  <div class = "login_register">
+
+    <div class = "login_promt">
+      <h3>Getting Started!</h3>
+      <br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+      <button>Register</button>
+      <br>
+      <br>
+      <button>Login</button>
+    </div>
+
+    <div class ="login">
+      <h1>Welcome Back!</h1>
+      <textarea>Email</textarea>
+      <br>
+       <textarea>Password</textarea>
+       <br>
+       <button>Login</button>
+       <br>
+       <br>
+       <button>Forgot Password?</button>
+       <button>New User? Register!</button>
+    </div>
+
+
+
+
+
+    <div class = "login_img">
+      <img src="https://www.denofgeek.com/wp-content/uploads/2021/02/Demon-Slayer-Season-2-Art-New-Slayer.jpg?resize=768%2C432">
+    </div>
+
+  </div>
+  
 </body>
 
 </html>
