--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
   <br>
    <br>
   <br>
-  <div class = "login_register">
+  <!-- <div class = "login_register">
 
     <div class = "login_promt">
       <h3>Getting Started!</h3>
@@ -50,15 +50,80 @@
        <button>New User? Register!</button>
     </div>
 
-
-
-
-
     <div class = "login_img">
       <img src="https://www.denofgeek.com/wp-content/uploads/2021/02/Demon-Slayer-Season-2-Art-New-Slayer.jpg?resize=768%2C432">
     </div>
 
+  </div> -->
+  <div class = "to_do_app">
+
+  <div class = "profile_display">
+    <img src="https://assets.change.org/photos/6/ty/dv/YMTydVZcocrnsek-1600x900-noPad.jpg?1582189423">
+    <div class = "welcome">
+      <h5>Welcome! $username</h5>
+      <h5>$email</h5>
+    </div>
+    <div class = "task_status">
+      <h5>Tasks Due Today (##)</h5>
+      <h5>Tasks Due This Week (##)</h5>
+    </div>
+     <div class = "categories">
+      <h5>Watch (##)</h5>
+      <h5>Read (##)</h5>
+       <h5>Buy (##)</h5>
+      <h5>Eat (##)</h5>
+    </div>
+    <div class = "completed_tasks">
+      <h5>Completed (##)</h5>
+    </div>
   </div>
+
+
+
+  <div class = "to_do">
+
+    <div class = "category_sort">
+      <input type="checkbox">
+      <label>All</label>
+      <input type="checkbox">
+      <label>Watch</label>
+      <input type="checkbox">
+      <label>Eat</label>
+      <input type="checkbox">
+      <label>Read</label>
+      <input type="checkbox">
+      <label>Buy</label>
+    </div>
+
+    <br>
+    <br>
+    <br>
+
+    
+    <h2>TO DO:</h2>
+
+    <div class = "task">
+
+      <div class = "check_complete">
+        
+        <input type = "checkbox">
+        <div class = "task_data">
+          <h5>Lunch</h5>
+          <h5>Due - Jan 7th, 2021 @1:00PM</h5>
+        </div>
+
+      </div>
+
+
+      <h5>Icons(info, edit, delete)</h5>
+
+      </div>
+
+  </div>
+    
+
+  </div>
+
   
 </body>
 
