new task forms created

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 
 <body>
   <nav>
-    <h1>To Do List!</h1>
+    <h1>Task Master!</h1>
     <div class = "nav_buttons">
       <button>New Task</button> 
       <button>Logout</button> 
@@ -57,7 +57,7 @@
   </div> -->
   <div class = "to_do_app">
 
-  <div class = "profile_display">
+  <!-- <div class = "profile_display">
     <img src="https://assets.change.org/photos/6/ty/dv/YMTydVZcocrnsek-1600x900-noPad.jpg?1582189423">
     <div class = "welcome">
       <h5>Welcome! $username</h5>
@@ -105,7 +105,7 @@
     <div class = "task">
 
       <div class = "check_complete">
-        
+
         <input type = "checkbox">
         <div class = "task_data">
           <h5>Lunch</h5>
@@ -119,8 +119,29 @@
 
       </div>
 
-  </div>
-    
+  </div> -->
+    <div class = "new_task">
+      <h4>New Task</h4>
+      <textarea></textarea>
+      <label>Task</label>
+      <br>
+      <textarea></textarea>
+      <label>Description</label>
+       <br>
+      <textarea></textarea>
+      <label>Start Date</label>
+       <br>
+      <textarea></textarea>
+      <label>End Date</label>
+       <br>
+      <textarea></textarea>
+      <label>Category</label>
+       <br>
+      <textarea></textarea>
+      <label>Priority</label>
+       <br>
+      <button>Create New Task!</button>
+    </div>
 
   </div>
 
