--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,17 +16,24 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  .main-content {
+    width: 100%;
+    text-align: left;
+    color: $primary-color;
+    margin-top: 150px;
+  }
+
 }
 
 .tasks {
   width: 90%;
-  padding-top: 150px;
 }
 
 article.listed-tasks header {
   display: flex;
   flex-direction: row;
-  align-items: center
+  justify-content: space-between;
 }
 
 article.listed-tasks h4 {
@@ -36,7 +43,6 @@ article.listed-tasks h4 {
 
 article.listed-tasks span.icons {
   padding-top: 10px;
-  margin-left: auto;
 }
 
 article.inner-content {
@@ -49,6 +55,15 @@ article.listed-tasks {
   background: #9392C3;
   padding: 10px;
   width: 100%;
-  height: 150px;
+  height: 100px;
   margin-bottom: 50px;
+}
+
+footer {
+  width: 30%;
+  height: 80px;
+  position: fixed;
+  padding-top: 20px;
+  padding-left: 50px;
+  bottom: 0;
 }
