--- a/styles/main.scss
+++ b/styles/main.scss
@@ -51,6 +51,7 @@ article.inner-content {
 }
 
 article.listed-tasks {
+  margin-top: 220px;
   border-radius: 25px;
   background: #9392C3;
   padding: 10px;
