Changing position of nav bar

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -6,7 +6,7 @@ nav {
   height: 7em;
   padding: 1.5em;
   width: 100%;
-  position: fixed;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
