--- a/styles/main.scss
+++ b/styles/main.scss
@@ -51,12 +51,13 @@ article.inner-content {
 }
 
 article.listed-tasks {
+  margin-top: 25px;
   border-radius: 25px;
   background: #9392C3;
   padding: 10px;
   width: 100%;
   height: 100px;
-  margin-bottom: 50px;
+  margin-bottom: 25px;
 }
 
 footer {
