--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -2,6 +2,8 @@
 
 nav {
   color: main.$primary-color;
+  font-family: main.$font-family;
+  font-size: 20px;
   background-color: #9392C3;
   height: 7em;
   padding: 1.5em;
