--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,6 +2,7 @@
 $primary-color: #FFFFFF;
 $font-family: 'Exo 2', sans-serif;
 $task-font: 'Montserrat Alternates', sans-serf;
+$buttonHoverColor: #C06C84;
 
 
 body {
@@ -18,6 +19,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 180px;
 
   .main-content {
     width: 100%;
@@ -70,7 +72,4 @@ footer {
   padding-top: 20px;
   padding-left: 50px;
   bottom: 0;
-}
-.icons > button {
-  background-color: transparent;
 }
