--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -9,6 +9,8 @@ nav {
   padding: 1.5em;
   width: 100%;
   margin-bottom: 20px;
+  position: fixed;
+  z-index: 1;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
