Adding buttons css and the form css

--- a/styles/buttons.scss
+++ b/styles/buttons.scss
@@ -37,8 +37,7 @@
 	background: none;
 	outline: none;
   cursor: pointer;
-}
-
-.icons > button:hover {
-  color: main.$buttonHoverColor;
+  &:hover {
+    color: main.$buttonHoverColor;
+  }
 }
