--- a/styles/main.scss
+++ b/styles/main.scss
@@ -58,6 +58,7 @@ article.listed-tasks {
   font-family: $task-font;
   margin-top: 25px;
   border-radius: 25px;
+  border: 1.5px solid;
   background: #9392C3;
   padding: 10px;
   width: 100%;
