--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -1,5 +1,7 @@
 // CSS for Modal (Form)
+@use 'main';
 
+// Main Modal
 .modal {
   display: none;
   position: fixed;
@@ -9,26 +11,29 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
 }
 
 #category-modal {
   margin: 1em 0em 0.5em 0em;
+  font-family: main.$font-family;
   font-size: 2em;
 }
 
 .category-select {
-  font-size: 1.5em;
+  border-radius: 10px;
+  font-family: main.$font-family;
+  font-size: 1em;
+  padding: 5px 0 5px 0;
 }
 
 /* Modal Content */
 .modal-content {
-  background-color: #fefefe;
+  background-color: #9392C3;
+  border-radius: 25px;
   margin: 250px auto;
   padding: 0em 1em 0.5em 1em;
-  width: 90%;
-
+  width: 70%;
 }
 
 .modal-content form div {
@@ -37,30 +42,40 @@
 	margin: 10px 30px 10px 5px;
 }
 
+// Submit button
 .modal-content form button {
+  cursor: pointer;
   display: flex;
 	box-shadow: none;
   margin-top: 5px;
   border: none;
-  background-color: white;
+  background: none;
   font-size: 2em;
   outline: none;
   align-self: center;
-
+  margin-top: 10px;
+  &:hover {
+    color: #355C7D;
+  }
 }
 
-/* The Close Button */
+.modal-content form textarea {
+  margin-top: 20px;
+  border-radius: 10px;
+  padding: 10px 10px 0 10px;
+  resize: none;
+}
+
+
+// Close button
 .close {
-  color: #aaa;
+  color: #000;
   float: right;
   font-size: 28px;
   font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
   cursor: pointer;
+  &:hover {
+    color: main.$buttonHoverColor
+  }
 }
 
