cleaning up directory, formatting, linting

--- a/styles/tasks.scss
+++ b/styles/tasks.scss
@@ -2,13 +2,13 @@
 @use 'main';
 
 #task-container {
-  width: 100%;
-  margin-right: 40px;
+	width: 100%;
+	margin-right: 40px;
 	padding: 1.5em 1.5em 1em 1.5em;
 }
 .h2 {
-  font-family: main.$font-family;
-  color: #FFF;
-  font-size: 2em;
-  margin: 0px 0px 5px 0px;
+	font-family: main.$font-family;
+	color: #fff;
+	font-size: 2em;
+	margin: 0px 0px 5px 0px;
 }
