--- a/styles/buttons.scss
+++ b/styles/buttons.scss
@@ -3,37 +3,41 @@
 
 // Button Group
 .button-group {
-  width: 100%;
-  height: fit-content;
-  display: flex;
-  justify-content: space-around;
-  padding-bottom: 20px;
+	width: 100%;
+	height: fit-content;
+	display: flex;
+	justify-content: space-around;
+	padding-bottom: 20px;
 }
 
 // Each button
-  .button-group button {
-    background: none;
-    border: none;
-    color: #FFF;
-    cursor: pointer;
-  }
+.button-group button {
+	background: none;
+	border: none;
+	color: #fff;
+	cursor: pointer;
+}
 
 // Button hover
-    .button-group button:hover {
-      color: main.$buttonHoverColor;
-      animation: pulse 2s infinite;
+.button-group button:hover {
+	color: main.$buttonHoverColor;
+	animation: pulse 2s infinite;
 
-      @keyframes pulse {
-        from { transform: scale(1); }
-        50% { transform: scale(0.85); }
-        to { transform: scale(1); }
-      }
-
-    }
-
+	@keyframes pulse {
+		from {
+			transform: scale(1);
+		}
+		50% {
+			transform: scale(0.85);
+		}
+		to {
+			transform: scale(1);
+		}
+	}
+}
 
 .icons > button {
-  border: none;
+	border: none;
 	background: none;
 	outline: none;
   cursor: pointer;
