--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -1,17 +1,17 @@
 @use 'main';
 
 nav {
-  color: main.$primary-color;
-  font-family: main.$font-family;
-  font-size: 20px;
-  background-color: #9392C3;
-  height: 7em;
-  padding: 1.5em;
-  width: 100%;
-  margin-bottom: 20px;
-  position: fixed;
-  z-index: 1;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+	color: main.$primary-color;
+	font-family: main.$font-family;
+	font-size: 20px;
+	background-color: #9392c3;
+	height: 7em;
+	padding: 1.5em;
+	width: 100%;
+	margin-bottom: 20px;
+	position: fixed;
+	z-index: 1;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
