--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,76 +1,74 @@
 // Constant Colors
-$primary-color: #FFFFFF;
+$primary-color: #ffffff;
 $font-family: 'Exo 2', sans-serif;
 $task-font: 'Montserrat Alternates', sans-serf;
-$buttonHoverColor: #C06C84;
-
+$buttonHoverColor: #c06c84;
 
 body {
-  min-height: 100vh;
+	min-height: 100vh;
 
-  background: #355C7D;  /* for old browsers */
-  background: -webkit-linear-gradient(to top, #C06C84, #6C5B7B, #355C7D);
-  background: linear-gradient(to top, #C06C84, #6C5B7B, #355C7D);
+	background: #355c7d; /* for old browsers */
+	background: -webkit-linear-gradient(to top, #c06c84, #6c5b7b, #355c7d);
+	background: linear-gradient(to top, #c06c84, #6c5b7b, #355c7d);
 }
 
 main {
-  width: 90%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 180px;
+	width: 90%;
+	margin: auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding-top: 180px;
 
-  .main-content {
-    width: 100%;
-    text-align: left;
-    color: $primary-color;
-    margin-top: 150px;
-  }
-
+	.main-content {
+		width: 100%;
+		text-align: left;
+		color: $primary-color;
+		margin-top: 150px;
+	}
 }
 
 .tasks {
-  width: 90%;
+	width: 90%;
 }
 
 article.listed-tasks header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
 
 article.listed-tasks h4 {
-  margin-left: 10px;
-  margin-bottom: 0px;
+	margin-left: 10px;
+	margin-bottom: 0px;
 }
 
 article.listed-tasks span.icons {
-  padding-top: 10px;
+	padding-top: 10px;
 }
 
 article.inner-content {
-  font-size: 12px;
-  margin-left: 10px;
+	font-size: 12px;
+	margin-left: 10px;
 }
 
 article.listed-tasks {
-  font-family: $task-font;
-  margin-top: 25px;
-  border-radius: 25px;
-  border: 1.5px solid;
-  background: #9392C3;
-  padding: 10px;
-  width: 100%;
-  height: 100px;
-  margin-bottom: 25px;
+	font-family: $task-font;
+	margin-top: 25px;
+	border-radius: 25px;
+	border: 1.5px solid;
+	background: #9392c3;
+	padding: 10px;
+	width: 100%;
+	height: 100px;
+	margin-bottom: 25px;
 }
 
 footer {
-  width: 30%;
-  height: 80px;
-  position: fixed;
-  padding-top: 20px;
-  padding-left: 50px;
-  bottom: 0;
+	width: 30%;
+	height: 80px;
+	position: fixed;
+	padding-top: 20px;
+	padding-left: 50px;
+	bottom: 0;
 }
